Fix some charset and routing errors